# crazy-fight

./: Cargo.toml  cardjsonformat.md  implemented_fn.md  networking_struc.md  structure.dio  structure.md  template.json
client/: Cargo.toml  build_wasm.sh
client/src/: main.rs  old_main.txt  old_main2.txt
client/src/menu/: mod.rs
client/src/net/: mod.rs
client/src/ui/: button.rs  checkbox.rs  container.rs  label.rs  mod.rs  slider.rs  textbox.rs  ui.md
client/src/views/: connection_error.rs  direct_connect.rs  in_room.rs  main_menu.rs  mod.rs  room_browser.rs
common/: Cargo.toml
common/src/: lib.rs
common/src/game/: event_manager.rs  game_state.rs  mod.rs  player.rs
common/src/server/: messages.rs  mod.rs  room_info.rs
res/: test_card.json  test_card_2.json  test_card_3.json
res/decks/base_deck/: addon_mover.json  addon_remover.json  alchemist.json  alien.json  ambulance.json  ammunition.json  archer.json  attack_potion.json  baggiest_trousers.json  baton.json  big_cheese.json  bone.json  boomerang.json  booster.json  boxes.json  boxing_gloves.json  brawler.json  cape.json  cat.json  chef.json  clone_potion.json  cosmic_traveller.json  cosmic_wyrm.json  cowboy.json  dark_matter.json  deck_info.json  demoman.json  dinosaur.json  dodgy_dealer.json  dog.json  dragon.json  (+107 more)
server/: Cargo.toml
server/src/: central.rs  common.rs  local.rs  main.rs  matchmaking.rs  messages.rs
src/: main.rs
src/game/: card.rs  condition.rs  deck.rs  event_manager.rs  game_state.rs  mod.rs  player.rs
src/ui/: button.rs  cardui.rs  container.rs  label.rs  mod.rs
(+15 files in other folders)
