[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
macroquad = { version = "0.4.14" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
common = { path = "../common" }




[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "*"
futures-util = "0.3"
tungstenite = "*"
uuid = { version = "1", features = ["serde", "v4"] }


[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
uuid = { version = "1", features = ["serde", "v4", "js"] }
wasm-bindgen = "*"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "*", features = ["WebSocket", "console", "BinaryType", "MessageEvent", "CloseEvent"] }
js-sys = "*"
futures = "0.3.31"
