[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
macroquad = "0.4.14"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
common = { path = "../common" }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "*"
tungstenite = "*"
uuid = { version = "1", features = ["v4", "serde"] }
futures-util = "0.3"